snippets/k8s/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: myservice
spec:
  routes:
    - kind: Rule
      match: Host(`myservice.lain.li`)
      services:
        - kind: Service
          name: myservice
          port: 8080
